--- a/.github/workflows/update-yt.yml
+++ b/.github/workflows/update-yt.yml
@@ -59,6 +59,16 @@ jobs:
           python3 api/ytlive/index.py --url "https://www.youtube.com/@ApriNaLdyMusicRemix/live" 7djjido2000.m3u8
           sleep 3
           python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=IujgQ5AHJhk" 7esportmlbbb.m3u8
+          sleep 3
+          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=ksonLpoJ8rQ" 7PALTAPPON1.m3u8
+          leep 3
+          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=7yRJ2vgpVNQ" 7PALTAPPON2.m3u8
+          leep 3
+          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=Dt6uurn1wX0" 7PALTAPPON3.m3u8
+
+
+
+          
   
       - name: git add
         run: |
