--- a/.github/workflows/update-yt.yml
+++ b/.github/workflows/update-yt.yml
@@ -40,25 +40,25 @@ jobs:
       - name: Update ONLINE
         run: |
           pwd
-          python3 api/ytlive/index.py --url "https://www.youtube.com/@larvacartoonvietnam6214/live" 24larva.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/@larvacartoonvietnam6214/live" 02larva.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/pubgmobileid/live" 24pubgid.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/pubgmobileid/live" 02pubgid.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/@NickToons/live" 24spongebob.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/@NickToons/live" 02spongebob.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/@LafadzDoa/live" 24zikirpagiiii.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/@LafadzDoa/live" 02zikirpagiiii.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/@IshtarMusic/live" 24zarjitenndee.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/@IshtarMusic/live" 02zarjitenndee.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=yNKvkPJl-tg" 24onee1tv.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=yNKvkPJl-tg" 02onee1tv.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/@breakbeatdj/live" 24rremiixxxbarat.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/@matamusik_id/live" 02rremiixxxbarat.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=D8idXdTYG4w&ab_channel=LaguTerbaru" 24popido2000.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=IWychVZY6Vg&ab_channel=LaguTerbaru" 02popido2000.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/@ApriNaLdyMusicRemix/live" 24djjido2000.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/@ApriNaLdyMusicRemix/live" 02djjido2000.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=IujgQ5AHJhk" 24esportmlbbb.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=IujgQ5AHJhk" 02esportmlbbb.m3u8
       
       - name: git add
         run: |
