--- a/.github/workflows/update-yt.yml
+++ b/.github/workflows/update-yt.yml
@@ -59,6 +59,9 @@ jobs:
           python3 api/ytlive/index.py --url "https://www.youtube.com/@ApriNaLdyMusicRemix/live" 03djjido2000.m3u8
           sleep 3
           python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=IujgQ5AHJhk" 03esportmlbbb.m3u8
+          sleep 3
+          python3 api/ytlive/index.py --url "https://www.youtube.com/AsiaRoadRacingChampionship/live" 03arrc.m3u8
+      
       
       - name: git add
         run: |
