--- a/.github/workflows/update-yt.yml
+++ b/.github/workflows/update-yt.yml
@@ -60,7 +60,7 @@ jobs:
           sleep 3
           python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=IujgQ5AHJhk" 03esportmlbbb.m3u8
           sleep 3
-          python3 api/ytlive/index.py --url "https://www.youtube.com/AsiaRoadRacingChampionship/live" 03arrc.m3u8
+          python3 api/ytlive/index.py --url "https://www.youtube.com/watch?v=k-y94MfRNGA" 03arrc.m3u8
       
       
       - name: git add
